Feature: refactor API provider to support OpenAI compatible endpoint

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,8 +1,11 @@
 # Copy this file to .env and fill in your values
 # cp docker/.env.example docker/.env
 
-# Required: Your OpenRouter API key
-OPENROUTER_API_KEY=sk-or-v1-YOUR_KEY_HERE
+# Required: OpenAI-compatible API key (works with OpenRouter, OpenAI, etc.)
+OPENAI_API_KEY=sk-or-v1-YOUR_KEY_HERE
+
+# Optional: OpenAI-compatible API base URL
+OPENAI_API_BASE=https://openrouter.ai/api/v1
 
 # Required: LLM model to use
 PICOBOT_MODEL=google/gemini-2.5-flash
