--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,8 +6,10 @@ services:
     container_name: picobot
     restart: unless-stopped
     environment:
-      # Required: Your OpenRouter API key
-      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-sk-or-v1-REPLACE_ME}
+      # Required: OpenAI-compatible API key (works with OpenRouter, OpenAI, etc.)
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-sk-or-v1-REPLACE_ME}
+      # Optional: OpenAI-compatible API base URL
+      - OPENAI_API_BASE=${OPENAI_API_BASE:-https://openrouter.ai/api/v1}
       # Required: The LLM model to use
       - PICOBOT_MODEL=${PICOBOT_MODEL:-google/gemini-2.5-flash}
       # Optional: Telegram bot token from @BotFather
